# tmux-windows

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  RELEASING.md  THIRD-PARTY-NOTICES.md  tmuxw.conf.example
.github/workflows/: release.yml
installer/: tmuxw.iss
packaging/: WINGET.md
packaging/winget/: Turin.tmuxw.installer.yaml  Turin.tmuxw.locale.en-US.yaml  Turin.tmuxw.yaml
scripts/: build.bat  installer.bat  package.bat
src/: client.c  client.h  cmd.c  cmd.h  copymode.c  copymode.h  layout.c  layout.h  main.c  render.c  render.h  server.c  server.h  session.c  session.h  status.c  status.h
src/emu/: screen.c  screen.h
src/model/: pane.c  pane.h  window.c  window.h
src/platform/: clipboard.c  clipboard.h  conpty.c  conpty.h  ipc.c  ipc.h  winterm.c  winterm.h
src/util/: strbuf.c  strbuf.h
tests/: test_cmd.c  test_copymode.c  test_emu.c  test_ipc.c  test_layout.c  test_status.c
